<resources>
    <string name="app_name">Rocket Fun</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="currently_playing_song">Rocket Fun Theme</string>
    <string name="currently_playing_artist">Artist</string>
    <string name="currently_playing_extra_info">Extra Info</string>
    <string name="play_pause">play or pause</string>
    <string name="text_mnu_set_ringtone">Set Ringtone</string>
    <string name="text_mnu_set_alarm">Set Alarm</string>
    <string name="text_mnu_set_notification">Set Notification</string>
    <string name="sounds">Sounds</string>
    <string name="email">Email</string>
    <string name="subject_email">Hi, I\'m using the Rocket Fun app</string>
    <string name="tab_news_text">News</string>
    <string name="tab_sounds_text">Sounds</string>
    <string name="tab_leaderboard_text">Leaders</string>
    <string name="settings_cat_general_title">General</string>
    <string name="settings_cat_update_news_when_start_title">Update news when start</string>
    <string name="settings_cat_update_tracker_when_start_title">Update tracker when start</string>
    <string name="main">Main</string>
    <string name="settings">Settings</string>
    <string name="tab_tracker_text">Tracker</string>
    <string name="ok_message_dialog">OK</string>
    <string name="storage_permission_message">For the application to be able to download the sounds you need to grant storage permission. On the next screen, click on permissions and set the storage flag.</string>
    <string name="write_settings_permission_message">For the application can set the sounds as ringtone, alarm or notification. On the next screen set the write settings flag.</string>
    <string name="sound_successful_set_ringtone">Sound successful set as ringtone!</string>
    <string name="sound_successful_set_alarm">Sound successful set as alarm!</string>
    <string name="sound_successful_set_notification">Sound successful set as notification!</string>
    <string name="title_search">Search</string>
</resources>
