<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_gravity="bottom|center"
    android:layout_height="wrap_content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/popup_window"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:padding="10dp">


        <TextView
            android:id="@+id/tv_ringtone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_ringtone"
            android:drawablePadding="15dp"
            android:gravity="center_vertical"
            android:padding="15dp"
            android:text="@string/text_mnu_set_ringtone"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/tv_alarm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_alarm"
            android:drawablePadding="15dp"
            android:gravity="center_vertical"
            android:padding="15dp"
            android:text="@string/text_mnu_set_alarm"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/tv_notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_notification"
            android:drawablePadding="15dp"
            android:gravity="center_vertical"
            android:padding="15dp"
            android:text="@string/text_mnu_set_notification"
            android:textAppearance="?android:attr/textAppearanceMedium" />


    </LinearLayout>
</android.support.v7.widget.CardView>